Fixed sidebar collapse system

--- a/index.css
+++ b/index.css
@@ -25,6 +25,8 @@ p {
     background-color: #f3f3f3;
     width: 15%;
     height: 100%;
+
+    transition: background-color, 1.5s;
 }
 
 .name {
@@ -37,6 +39,10 @@ p {
     cursor: pointer;
     background-color: inherit;
     margin-top: 10px;
+    margin-right: 10px;
+    width: inherit;
+
+    transition: background-color 0.7s;
 }
 #image-button:hover {
     background-color: lightgray;
@@ -49,5 +55,26 @@ p {
     margin-top: 15px;
 }
 
+.hidden-button {
+    transition: all 1.5s;
+    transform: translateX(-485%);
+}
 
+.visible-button {
+    transform: translateX(0);
+    transition: all 1.5s;
+}
 
+.hidden {
+    transition: all 1.5s;
+    filter: blur(5px);
+    opacity: 0;
+    transform: translateX(-100%);
+}
+
+.visible {
+    opacity: 1;
+    filter: blur(0);
+    transform: translateX(0);
+    transition: all 1.5s;
+}
